# DSA-Visualizer

./: .gitignore  CMakeLists.txt  Code_visualizer.py  README.md  animation.py  arraywindow.cpp  arraywindow.h  arraywindow.ui  bubble_sort.py  er.name Correct Name  form.ui  form.ui.autosave  main.cpp  main.py  mainwindow.cpp  mainwindow.h  mainwindow.ui  pyproject.toml  requirements.txt  selection_sort.py  sorter.py  sorting_algorithm  sorting_algorithm.cpp  sorting_algorithm.h  source  ui_form.py  ui_insertion_sort.py  visualizer.cpp  visualizer.h  widget.py
.qtcreator/: pyproject.toml.user.bc51de2
.qtcreator/Python_3_12_64_bit_venv/: pyvenv.cfg
.qtcreator/Python_3_12_64_bit_venv/Scripts/: activate  activate.bat
Animation/: Animation_base.py
algorithms/: Stack.py
algorithms/BFS/: BFS_algo.py
algorithms/BST/: Binary_Search_Tree.py
algorithms/DFS/: DFS_algo.py
algorithms/Linked_List/: singly_LinkedList.py
algorithms/Queue/: Queue_algo.py
algorithms/Searching/: Binary_Search.py  Linear_search.py
algorithms/sorting/: Bubble_sort.py  Selection_sort.py  insertion_sort.py  merge_sort.py  selection_sort.py
ui/: Binary_search.ui  main_window.ui  ui_Binary_search.py  ui_form.py
visualizer/: Base_Visualizer.py  Code_visualizer.py  Searching_visualizer.py  Stack_visualizer.py  code_visualizer.py  insertion_sort_anim.py  sorting_visualizer.py
visualizer/BFS_viz/: BFS_visualizer.py
visualizer/BST_viz/: BST_visualizer.py
visualizer/DFS_viz/: DFS_visualizer.py
visualizer/LinkedList_viz/: singly_LinkedList_visualizer.py
visualizer/Sorting_viz/: InsertionSort_visualizer.py  SelectionSort_visualizer.py  mergeSort_visualizer.py
visualizer/queue_viz/: Queue_visualizer.py
visualizer/searching_viz/: BinarySearch_visualizer.py  LinearSearch_Visualizer.py
visualizer/sorting_viz/: SelectionSort_visualizer.py  insertionSort_visualizer.py  mergeSort_visualizer.py
