[project]
name = "PySide Widgets Project"

[tool.pyside6-project]
files = [".gitignore", "algorithms/sorting/_init_.py", "algorithms/sorting/insertion_sort.py", "algorithms/sorting/merge_sort.py", "form.ui", "main.py", "ui_form.py", "visualizer/code_visualizer.py", "visualizer/sorting_visualizer.py", "visualizer/sorting_viz/_init_.py", "visualizer/sorting_viz/insertionSort_visualizer.py", "visualizer/sorting_viz/mergeSort_visualizer.py", "widget.py"]
