[project]
name = "PySide Widgets Project"

[tool.pyside6-project]
files = [".gitignore", "algorithms/BST/Binary_Search_Tree.py", "algorithms/Queue/Queue_algo.py", "algorithms/Searching/Binary_Search.py", "algorithms/Searching/Linear_search.py", "algorithms/Stack.py", "algorithms/sorting/Bubble_sort.py", "algorithms/sorting/Selection_sort.py", "algorithms/sorting/merge_sort.py", "form.ui", "main.py", "ui/Binary_search.ui", "visualizer/BST_viz/BST_visualizer.py", "visualizer/Code_visualizer.py", "visualizer/LinkedList_viz/singly_LinkedList_visualizer.py", "visualizer/Sorting_viz", "visualizer/Sorting_viz/InsertionSort_visualizer.py", "visualizer/Sorting_viz/SelectionSort_visualizer.py", "visualizer/Sorting_viz/mergeSort_visualizer.py", "visualizer/Stack_visualizer.py", "visualizer/queue_viz/Queue_visualizer.py", "visualizer/searching_viz/BinarySearch_visualizer.py", "visualizer/searching_viz/LinearSearch_Visualizer.py", "visualizer/sorting_visualizer.py", "widget.py"]
